--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,8 @@
 
     <!-- main -->
     <section class="gridSection">
-        <div><!--
+        <div>
+            <!--
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -103,10 +104,12 @@
 
     <!-- footer -->
     <footer class="gridFooter">
-        <p>
-            Derechos Reservados / Ligth Drawings Copy&
+        <div class="container-fluid bg-dark text-center p-5">
+            <p class="small">&copy; Todos los derechos reservedados :: Light Drawings :: 2022
 
-        </p>
+            </p>
+
+        </div>
 
 
 
