--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/Css/style.css">
     
     <meta name="keywords" content="arte, dibujos, fe, salvador, fotografía, inspiración">
-    <meta name="description" content="espacio lleno de inspiración y poesia">
+    <meta name="description" content="Un espacio lleno de inspiración y poesia, que habla acerca de la fe y se expresa a través del arte ">
 
     <title>Light Drawings</title>
 </head>
